ionos_sbx/dome-certification/frontend/certification-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: certification-frontend
  namespace: dome-certification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: certification-frontend
  template:
    metadata:
      labels:
        app: certification-frontend
    spec:
      containers:
        - name: certification-frontend
          image: bfeitaisuw/dome-compliance-frontend:sbx-1.1.20
          ports:
            - containerPort: 80
              name: http
              protocol: TCP
