ionos_sbx/dome-certification/frontend/certification-frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: certification-frontend-svc
  namespace: dome-certification
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: certification-frontend-svc
    app.kubernetes.io/name: certification-frontend-svc
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
